Brought the controller, service and their dependent classes uo to sync.